crates/core/tests/ui/typed_query/fail/authored_unsupported_marker.rs
babar::schema! {
    mod app_schema {
        table public.users {
            id: indexed(int4),
        },
    }
}

fn main() {}
